<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.urvish.assignment7.MainActivity">

    <EditText
        android:id="@+id/edittxtquery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8dp"
        android:hint="@string/find_the_title"
        android:padding="@dimen/_8dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/btngetdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:padding="@dimen/_8dp"
            android:text="@string/get_data"
            android:layout_weight="1"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/force_crash"
            android:onClick="forceCrash"
            android:padding="@dimen/_8dp"
            android:layout_margin="@dimen/_8dp"
            android:layout_weight="1"/>

    </LinearLayout>
    <Button
        android:id="@+id/floatingActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8dp"
        android:layout_margin="@dimen/_16dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:text="@string/nextactivity"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="355dp">

        <TextView
            android:id="@+id/txtcontent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:padding="@dimen/_8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />
    </ScrollView>







</LinearLayout>
